--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Nekos_Attrition_Extended_Overhaul",
-    "version_number": "1.2.8",
+    "version_number": "1.2.9",
     "website_url": "https://github.com/NekoUwUGamerfnf/MixedGame/tree/MixedGame",
-    "description": "Just Like Attrition Extended Overhaul but its gonna be updated and better",
+    "description": "Attrition With Titans",
     "dependencies": []
 }
